title, version, description and basePath in swagoo annotations, route in Patch method annotations fixed
